header and section added

--- a/index.html
+++ b/index.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat Healthy website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="styles/index.css">
 </head>
-<body>
-    <header>
 
+<body class="montserrat-regular">
+    <header class="header">
+        <div class="header-container">
+            <div class="header-column header-column-1">
+                <h1 class="header-title">
+                    <span class="orange-color
+                    ">Skip</span> The Diet,
+                    Just Eat Healthy
+                    With Food Network
+                </h1>
+                <p class="header-subtitle">
+                    Imagine you don't need a diet because we provide
+                    healthy and delicious food for you!
+                </p>
+                <button class="header-btn orange-btn">Order Food</button>
+            </div>
+            <div class="header-column image-col">
+                <img src="images/female/eat-healthy-food-png-transparent-eat-healthy-foodpng-images-woman-eating-png-480_319-removebg-preview.png" alt="" class="hero-img">
+            </div>
+        </div>
     </header>
     <main>
-
+        <section class="section-1">
+            <div class="section-1-container">
+                <div class="section-1-colum">
+                    <img class="section-1-image" src="images/female/Person Image.png" alt="">
+                </div>
+                <div class="section-1-colum">
+                    <h3 class="section-1-title">About Me</h3>
+                    <p class="section-1-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum diam orci pretium a pharetra, feugiat cursus. Dictumst risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non. Non commodo volutpat, pharetra, vel.</p>
+                    <button class="orange-btn">Contact Me</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
