--- a/index.html
+++ b/index.html
@@ -46,6 +46,24 @@
                 </div>
             </div>
         </section>
+        <section class="section-2">
+            <div class="section-2-container">
+                <h3 class="section-2-title">My recipies</h3>
+                <p class="section-2-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <div class="card-container">
+                    <div class="cards">
+                        <img src="images/food/Project Cover.jpg" alt="" class="card-image">
+                        <h4 class="card-title">Recipie Title</h4>
+                        <p class="card-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    </div>
+                    <div class="cards">
+                        <img src="images/food/Project Cover.jpg" alt="" class="card-image">
+                        <h4 class="card-title">Recipie Title</h4>
+                        <p class="card-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
